--- a/packages/farmify-server/package.json
+++ b/packages/farmify-server/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev":"nodemon ./bin/www",
-    "test":"jest"
+    "start:dev": "nodemon ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-promise-router": "^3.0.3",
+    "express-validator": "^6.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "lodash": "^4.17.15",
+    "morgan": "~1.9.1",
+    "pg": "^8.0.3"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   },
   "engines": {
     "node": "12.16.1",
     "yarn": "1.22.4"
+  },
+  "nodemonConfig": {
+    "ext": "js, json"
   }
 }
