--- a/packages/farmify-server/package.json
+++ b/packages/farmify-server/package.json
@@ -24,5 +24,9 @@
   "engines": {
     "node": "12.16.1",
     "yarn": "1.22.4"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "supertest": "^4.0.2"
   }
 }
