--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,9 @@
     "rules": {
         "func-names":"off",
         "no-unused-vars":"off",
-        "no-undef":"off"
+        "no-undef":"off",
+        "linebreak-style":"off",
+        "no-console":"off",
+        "brace-style":"off"
     }
 }
